# paraphraser

./: .gitignore  Procfile  app.py  form.py  functions.py  permuted_syntax_tree.py  pyproject.toml  requirements.txt
static/css/: style.css  variables.css
static/js/: script.js
templates/: index.html
